# OCR_P12

./: .gitignore  README.md  cli.py  pyproject.toml  pytest.ini
epic_events_crm/: cli.py  cli_import.txt  main.py  models.py
epic_events_crm/commands/: client_command.py  contract_command.py  event_command.py  user.py  user_command.py
epic_events_crm/config/: config.py  init_permissions.py
epic_events_crm/models/: __init__.py  client.py  contract.py  event.py  role.py  user.py
epic_events_crm/repositories/: client_repository.py  contract_repository.py  event_repository.py  user_repository.py
epic_events_crm/scripts/: init_db.py
epic_events_crm/services/: auth_service.py  client_service.py  contract_service.py  event_service.py  user_service.py
epic_events_crm/utils/: auth_utils.py  jwt_utils.py  permission_utils.py  user_utils.py  utils.py
tests/: conftest.py
tests/unit/: test_auth_service.py  test_client_repository.py  test_user_repository.py  test_user_service.py
