[tool.poetry]
name = "epic-events-crm"
version = "0.1.0"
description = ""
authors = ["Damien Vincelot <damien.vincelot@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.37"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
